RESOLVED FIXED69558
Web Inspector: Element highlighting does not highlight padding/border/margin for inline elements.
https://bugs.webkit.org/show_bug.cgi?id=69558
Summary Web Inspector: Element highlighting does not highlight padding/border/margin ...
Vsevolod Vlasov
Reported 2011-10-06 13:45:19 PDT
Patch to follow.
Attachments
Patch (7.77 KB, patch)
2011-10-06 13:48 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-10-06 13:48:26 PDT
WebKit Review Bot
Comment 2 2011-10-07 03:18:33 PDT
Comment on attachment 110009 [details] Patch Clearing flags on attachment: 110009 Committed r96925: <http://trac.webkit.org/changeset/96925>
WebKit Review Bot
Comment 3 2011-10-07 03:18:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.