Web Inspector: Element highlighting does not highlight padding/border/margin for inline elements. https://bugs.webkit.org/show_bug.cgi?id=69558

Reviewed by Pavel Feldman.

* inspector/DOMNodeHighlighter.cpp:


Canonical link: https://commits.webkit.org/85682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96925 268f45cc-cd09-0410-ab3c-d52691b4dbfc